Implement condition classes for game mechanics; add BiomeCondition, HeightCondition, WeatherCondition, and others for enhanced gameplay features